--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="./styles/style.css" rel="stylesheet" />
+    <link href="./styles/css/style.css" rel="stylesheet" />
   </head>
   <body>
     <h1>test</h1>
+    <h2>test</h2>
   </body>
 </html>
