--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
         <li><a href="#">Go to home</a></li>
       </ul>
     </div>
+    <hr />
+    <div class="textdiv">
+      <h1>AQorbani</h1>
+      <h3>JavaScript</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Nunc scelerisque
+        viverra mauris in aliquam sem fringilla ut. Dolor magna eget est lorem
+        ipsum dolor sit amet. Pellentesque eu tincidunt tortor aliquam. Nulla
+        aliquet enim tortor at auctor urna. Hendrerit dolor magna eget est
+        lorem. Turpis egestas integer eget aliquet nibh praesent tristique.
+        Varius duis at consectetur lorem donec massa. Viverra aliquet eget sit
+        amet. Sagittis id consectetur purus ut. Nibh mauris cursus mattis
+        molestie a.
+      </p>
+    </div>
   </body>
 </html>
