--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="./styles/css/style.css" rel="stylesheet" />
+    <link href="./styles/css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <h1>test</h1>
