--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
     </div>
     <hr />
     <h2 class="header">Header</h2>
+    <hr />
+    <h3 class="title1">Testing the loop in sass</h3>
+    <h3 class="title2">Testing the loop in sass</h3>
+    <h3 class="title3">Testing the loop in sass</h3>
+    <h3 class="title4">Testing the loop in sass</h3>
+    <h3 class="title5">Testing the loop in sass</h3>
   </body>
 </html>
